--- a/.github/workflows/myfirst.yml
+++ b/.github/workflows/myfirst.yml
@@ -6,5 +6,12 @@ jobs:
         steps:
         -   name: list
             run: uname
-            
+        -   name: read
+            run: cat ReadMe.md
+
+    secondjob:
+        runs-on: ubuntu
+        steps:
+            name: Install
+            run: yum install telnet        
         
